Fixed extra whitespace being inserted around album images

--- a/static/global.css
+++ b/static/global.css
@@ -12,7 +12,7 @@ a {
 }
 
 .collage {
-
+    font-size: 0;
 }
 
 .collage > div {
@@ -21,6 +21,7 @@ a {
     height: 256px;
     margin: 0 10px 10px 0;
     transition: transform .25s;
+    font-size: initial;
 }
 
 .collage > div img {
